# algo-trader

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  mypy.ini  pyproject.toml
backend/.hypothesis/constants/: 0081079931adbda6  07374dc4ce221821  0bad9a0ac9a29796  155af649e86301f3  1d64d0e15c1aa7ff  275d4c58f15857fb  3711a7062170fb68  38bf9f80c41421ab  39f771d642a28308  46b313d20c35200b  47a8c9d7dd9d2cf5  4a05cbbaabb164d5  4c4236096ecaa8c0  517d3c2e3140c8f6  563fe2c62b4bc5ba  5c7f72330e104f42  6d153424d446d3cc  6fe7a7d27dc5a315  73826b062dbb7ca7  83d26ba8690027eb  8847d4675d972701  95088c4e1aa607b4  a367aed17b2640a9  a6e5489e6e9973e3  ad03a761a4c6ded6  bfde29543c11c3ee  c4bd580821cc49e4  ca568e8198173f0d  ce11ee98b193fb3e  d45358fb2a70a81c  d5c0a8a3ac00d645  da39a3ee5e6b4b0d  dea27a2abee9d16e  e3108b09bcce7151  e694f7275f29a476  ea4e819bc7416fc3  ebdad877e41d72df  edebd4fd7beb2aaa  f4d022a5f740d7c2  f784e74de9ef8f9b
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_step4_order_schema_updates.py
backend/app/: config.py  main.py
backend/app/backtest/: __init__.py  config.py  data_loader.py  executor.py  metrics.py  runner.py
backend/app/broker/: __init__.py  broker_adapter.py  data_provider.py  errors.py  types.py  utils.py
backend/app/cli/: commands.py
backend/app/engine/: __init__.py  candle_aggregator.py  indicators.py
backend/app/models/: __init__.py  backtest.py  base.py  order.py
backend/tests/: conftest.py  factories.py
(+106 files in other folders)
